results/SVCOMP/2-shot/log-boundcheck30-2024_03_19_00_05_22.txt
public class boundcheck30 {
    //@ requires true;
    //@ ensures true;
    //@ ensures \result == 0;
    private static void recursion(int i) {
        if (i == 0) {
            return;
        }
        if (i > 0) {
            recursion(i - 1);
        }
        if (i < 0) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/boundcheck30.java:4: error: A \result expression may not be used in the specification of a method that returns void
    //@ ensures \result == 0;
                 ^
1 error

